# CS510-RustWebDev

./: Cargo.toml  README.md  notes.txt  questions.json
Yew-Frontend/: Cargo.toml  README.md  index.css
Yew-Frontend/src/: cookie.rs  main.rs  question.rs
ch10-docker/: Cargo.toml  Dockerfile  README.md  compose.yaml
ch10-docker/migrations/: 20240501020401_questions_table.up.sql  20240523050059_create_accounts_table.up.sql
ch10-docker/src/: main.rs  questions.json  store.rs
ch10-docker/src/routes/: answer.rs  authentication.rs  question.rs
ch10-docker/src/types/: account.rs  answer.rs  mod.rs  questions.rs
ch2/: Cargo.toml  README.md
ch2/doc/: help.html  search-index.js  settings.html
ch2/doc/main/: all.html  index.html
ch2/src/: main.rs
ch3/: README.md  questions.json
ch3/src/: main.rs
ch4/: README.md  questions.json
ch4/src/: main.rs
ch5/: README.md  main.rs
ch5/routes/: question.rs
ch5/src/: main.rs  store.rs
ch6/: Cargo.toml  README.md  main.rs
ch6/routes/: question.rs
ch6/src/: main.rs  store.rs
ch6/types/: pagination.rs
ch7/: README.md
ch7/src/: main.rs  store.rs
ch8/: README.md
ch8/src/: store.rs
ch9/: Cargo.toml  README.md
ch9/migrations/: 20240501020551_answers_table.up.sql
ch9/src/: main.rs  store.rs
ch9/src/routes/: answer.rs  authentication.rs  question.rs
ch9/src/types/: mod.rs  pagination.rs
qa_project/: Cargo.toml  questions.json
qa_project/src/: main.rs
src/: main.rs  store.rs
src/routes/: answer.rs  question.rs
src/types/: mod.rs  pagination.rs
test_project/src/: main.rs
(+17 files in other folders)
