[package]
name = "qa_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
axum = "0.7.5"
hyper = { version = "0.14", features = ["server","tcp"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.26"  # Or the version you want to use
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
serde_json = "1.0"